# mpu6050_sensor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/data_structure/: AccelerometerData.hpp  GyroscopeData.hpp  Mpu6050Data.hpp  OrientationData.hpp
src/exception/: FileDescriptorException.hpp  Mpu6050NotFoundException.hpp
src/execption/: FileDescriptorExecption.hpp  Mpu6050NotFound.hpp
src/implementation/: AccelerometerMpu6050.cpp  AccelerometerMpu6050.hpp  GyroscopeMpu6050.cpp  GyroscopeMpu6050.hpp  Mpu6050.cpp  Mpu6050.hpp  Mpu6050ReadData.cpp  Mpu6050ReadData.hpp
src/interface/: AccelerometerIfc.hpp  GyroscopeIfc.hpp  KalmanFilterIfc.hpp  SensorIfc.hpp
src/kalman_filter/: CalculationPitch.cpp  CalculationPitch.hpp  CalculationRoll.cpp  CalculationRoll.hpp  CovarianceMatrix.cpp  CovarianceMatrix.hpp  ECovarianceCell.hpp  EKalmanAmplifierCell.hpp  EPredictionCell.hpp  KalmanAmplifierMatrix.cpp  KalmanAmplifierMatrix.hpp  KalmanFilter.hpp  KalmanFilterMpu6050.cpp  KalmanFilterMpu6050.hpp  KalmanMatrixOperation.cpp  KalmanMatrixOperation.hpp  PredictionMatrix.cpp  PredictionMatrix.hpp
src/ser_des/: SerDesMpu6050Data.cpp  SerDesMpu6050Data.hpp  SerDesOrientation.cpp  SerDesOrientation.hpp
src/utils/: AccelerometerHumanReadable.cpp  AccelerometerHumanReadable.hpp  AccelerometerNormalize.cpp  AccelerometerNormalize.hpp  GyroscopeHumanReadable.cpp  GyroscopeHumanReadable.hpp  GyroscopeNormalize.cpp  GyroscopeNormalize.hpp  PrintMpu6050Data.cpp  PrintMpu6050Data.hpp
src/utils/helpers/: GyroscopeDataF.hpp
